*** Changelog ***

= 8.3.0 - xxxx-xx-xx =
* Add - Include Affirm as a payment method for stores using the updated checkout experience.
* Add - Add Klarna to the available payment methods.
* Tweak - Adds the tracking of a selected card brand when paying using co-branded credit cards.
* Fix - The preferred card brand is used when paying with a co-branded credit card.
* Add - Additional information is displayed on the "Payment methods" page when listing co-branded credit cards.
* Fix - Prevent duplicate stripe meta data on orders caused by processing redirect payments and webhooks simultaneously.
* Fix - Processing a refund of a non-card payments (i.e. iDeal, giropay) through the Stripe dashboard was not showing as refunded in WooCommerce for stores with UPE enabled.
* Fix - Prevent orders that require manual review in Stripe being marked as processing in WooCommerce before approval.
* Tweak - Improve performance with handling redirect payments by not constructing every payment gateways on each page load.
* Fix - Resolved an error that could prevent purchasing subscriptions that have a capital letter in the billing period. eg "Year" instead of "year".

= 8.2.0 - 2024-04-11 =
* Tweak - Improve the display of the Stripe account ID in the settings page.
* Add - Enable custom styling of the Payment Elements for stores using the updated checkout experience.
* Fix - Alipay icon not being displayed on the Block checkout page.
* Fix - Ensure the hold stock setting does not cancel pending stripe orders that are still waiting for customer action (eg confirm 3DS or complete payment redirect).
* Fix - Prevent checkout errors when customers with one-word names process payment using Apple Pay or Google Pay.
* Tweak - Remove the functionality for saving the customized statement descriptors.
* Tweak - Remove unused WC_Stripe_Old_Settings_UPE_Toggle_Controller class and related scripts.