@@ -129,6 +129,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 == Changelog ==
 
 = 8.3.0 - xxxx-xx-xx =
+* Add - Include Afterpay as a payment method for stores using the updated checkout experience.
 * Add - Include Affirm as a payment method for stores using the updated checkout experience.
 * Add - Add Klarna to the available payment methods.
 * Tweak - Adds the tracking of a selected card brand when paying using co-branded credit cards.
